{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 330,
  "lineage": "7df9f09b-a75c-4aa6-4def-b945c6c2d6ab",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:security-group/sg-0eac35fba3f7d6b0f",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0eac35fba3f7d6b0f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management20210602055817755900000005",
            "name_prefix": "all_worker_management",
            "owner_id": "264100014405",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:security-group/sg-0dc60580ad70b07e9",
            "description": "security group with an inbound rule that allows inbound NFS traffic for your Amazon EFS mount points",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc60580ad70b07e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "allows inbound NFS traffic from the CIDR for your cluster VPC",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "elk_efs",
            "name_prefix": "",
            "owner_id": "264100014405",
            "revoke_rules_on_delete": false,
            "tags": {
              "COMPONENT_NAME": "elk"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk"
            },
            "timeouts": null,
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:security-group/sg-000e7c491343b71c9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-000e7c491343b71c9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20210602055818509700000007",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "264100014405",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:security-group/sg-0465446d5cde54d42",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0465446d5cde54d42",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two20210602055818323300000006",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "264100014405",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01627e1a1afdb47b0",
            "domain": "vpc",
            "id": "eipalloc-0b23f3c8b18d0c367",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-075ecd3b17cf97e94",
            "private_dns": "ip-10-0-4-211.ap-southeast-2.compute.internal",
            "private_ip": "10.0.4.211",
            "public_dns": "ec2-13-238-144-207.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.238.144.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:internet-gateway/igw-00f4dcb5a5247d13c",
            "id": "igw-00f4dcb5a5247d13c",
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b23f3c8b18d0c367",
            "id": "nat-037ccea015052009e",
            "network_interface_id": "eni-075ecd3b17cf97e94",
            "private_ip": "10.0.4.211",
            "public_ip": "13.238.144.207",
            "subnet_id": "subnet-0a5d52b77279c213b",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a59e042fee3f56201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-037ccea015052009e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a59e042fee3f5620",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00f4dcb5a5247d13c",
            "id": "r-rtb-053f0835f793be9381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-053f0835f793be938",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_internet_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:route-table/rtb-0a59e042fee3f5620",
            "id": "rtb-0a59e042fee3f5620",
            "owner_id": "264100014405",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-037ccea015052009e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:route-table/rtb-053f0835f793be938",
            "id": "rtb-053f0835f793be938",
            "owner_id": "264100014405",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f4dcb5a5247d13c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public",
              "kubernetes.io/cluster/elk": "shared"
            },
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d8eff3e1be6ee85",
            "route_table_id": "rtb-0a59e042fee3f5620",
            "subnet_id": "subnet-0216f78320c8825b0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0961fdd6830f40268",
            "route_table_id": "rtb-0a59e042fee3f5620",
            "subnet_id": "subnet-07e1a3013e032b93f"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081b9d4cc3375105d",
            "route_table_id": "rtb-0a59e042fee3f5620",
            "subnet_id": "subnet-07e7524dc761d26a8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ad4e3cf45c2533d",
            "route_table_id": "rtb-053f0835f793be938",
            "subnet_id": "subnet-0a5d52b77279c213b"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09931b3869030ea28",
            "route_table_id": "rtb-053f0835f793be938",
            "subnet_id": "subnet-0a449f943588a476f"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08215eba748763bee",
            "route_table_id": "rtb-053f0835f793be938",
            "subnet_id": "subnet-0040f498bbc14a874"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-0216f78320c8825b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0216f78320c8825b0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-07e1a3013e032b93f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07e1a3013e032b93f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-07e7524dc761d26a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07e7524dc761d26a8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-private-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-0a5d52b77279c213b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0a5d52b77279c213b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2a",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-0a449f943588a476f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0a449f943588a476f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2b",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:subnet/subnet-0040f498bbc14a874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0040f498bbc14a874",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc-public-ap-southeast-2c",
              "kubernetes.io/cluster/elk": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0583ecc1d625e7492"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:264100014405:vpc/vpc-0583ecc1d625e7492",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d971ace1a530393",
            "default_route_table_id": "rtb-05cde2296cf908f4c",
            "default_security_group_id": "sg-06a9e78445164f808",
            "dhcp_options_id": "dopt-9b3e11fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0583ecc1d625e7492",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05cde2296cf908f4c",
            "owner_id": "264100014405",
            "tags": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            },
            "tags_all": {
              "COMPONENT_NAME": "elk",
              "Name": "elk-vpc",
              "kubernetes.io/cluster/elk": "shared"
            }
          }
        }
      ]
    }
  ]
}